--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 <form method="post" action="login.php">
 
+<input type="email" name="login" value="usuario" id="login" onFocus="field_focus(this, 'usuario');" onblur="field_blur(this, 'usuario');" class="email" />
   
 <input type="password" name="senha" value="suasenha" id="senha" onFocus="field_focus(this, 'suasenha');" onblur="field_blur(this, 'suasenha');" class="email" />
   
